--- a/style.css
+++ b/style.css
@@ -237,7 +237,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    height: 60vh;
+    min-height: 60vh;
 }
 
 #picsContainer {
@@ -394,8 +394,8 @@
     position: absolute;
     top: 350px;
     width: 100%;
-    border: 3px solid  rgb(115, 157, 245);
-    border-radius: 20px;
+    border: 3px dotted  rgb(115, 157, 245);
+    /* border-radius: 10px; */
 }
 
 .spoke{
@@ -639,7 +639,7 @@
     width: 65%;
     height: 4em;
     border: 3px solid rgb(150, 150, 150);
-    border-radius: 1em;
+    border-radius: 4px;
     text-align: center;
 }
 
@@ -655,7 +655,7 @@
     width: 65%;
     height: 15em;
     border: 3px solid rgb(150, 150, 150);
-    border-radius: 1em;
+    border-radius: 4px;
     text-align: center;
 }
 
@@ -672,7 +672,7 @@
     justify-content: center;
     width: 40%;
     height: 3em;
-    border-radius: 3em;
+    border-radius: 4px;
     border: rgb(115, 157, 245);
     background-color: rgb(115, 157, 245);
     color: whitesmoke;
