--- a/style.css
+++ b/style.css
@@ -317,9 +317,8 @@
     flex-direction: column;
     align-items: center;
     /* flex-wrap: wrap; */
-    height: 54em;
+    min-height: 54em;
     width: 100%;
-    min-height: 30vh;
 }
 
 #philosophy h1{
