--- a/style.css
+++ b/style.css
@@ -652,6 +652,7 @@
 .videoDemoContainer {
   position: relative;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-around;
   align-items: center;
   margin-top: 1em;
