--- a/style.css
+++ b/style.css
@@ -661,7 +661,7 @@
 .documentationLinks {
   text-decoration: none;
   color: rgb(70, 96, 151);
-  padding: 1em;
+  padding: 0 1em 0 1em;
   transition: 0.4s ease;
 }
 
@@ -721,6 +721,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   position: absolute;
   top: 0;
   left: 0;
